# algorithmic-languages-2-lab-4

./: .clang-format  CMakeLists.txt
include/: example_exception.h  raii.h  standard_exceptions.h
sources/: example_exception.cpp  main.cpp  raii.cpp  standard_exceptions.cpp
